# MemRL

./: AGENT.md  Claude.md  Project.md  README.md  pyproject.toml  requirements.txt
configs/: rl_alf_config.yaml  rl_alf_ray.yml  rl_bcb_config.yaml  rl_hle_config.yaml  rl_llb_config.yaml
data/alfworld/: alfworld_examples.json
memrl/agent/: __init__.py  base.py  custom_agent.py  history.py  memp_agent.py  prompts.py
memrl/configs/: config.py
memrl/envs/: alfworld_episode_adapter.py
memrl/episode/: __init__.py  agent_runner.py  base.py  env_adapter.py
memrl/memory/: __init__.py  episodic_bank.py  graph.py  skill_node.py  skill_representation.py
memrl/providers/: __init__.py  base.py  embedding.py  llm.py
memrl/run/: alfworld_rl_runner.py  base_runner.py  llb_rl_runner.py
memrl/service/: __init__.py  formation_judger.py  memory_service.py  procedural_memory.py  research_memory_service.py  retrievers.py  strategies.py
memrl/service/prompts/: __init__.py
memrl/service/sleep_consolidation/: __init__.py  checkpoint.py  clustering.py  prompts.py  service.py  types.py
memrl/skills/: __init__.py  memory_retrieval.py
memrl/skills/memory_retrieval_skill/: SKILL.md
memrl/utils/: event_logging.py  q_utils.py
run/: run_alfworld.py  run_alfworld_ray.py
scripts/: run_alfworld_train.sh  test_memory_graph_ingestion.py  test_memory_graph_persistence.py  test_memory_retrieval.py  test_transferability_and_sleep_trigger.py
